<resources>
    <string name="default_web_client_id" translatable="false">266162092275-tu7qo2v6lt4vk1lh91d393r9mspgikib.apps.googleusercontent.com</string>
    <string name="GIPHY_API_KEY">&amp;api_key=8pMHB2U478qdwh89RkHf9Lg4onHDh22M</string>
    <string name="GIPHY_SEARCH">http://api.giphy.com/v1/gifs/search?q=</string>
    <string name="GIPHY_TRENDING">http://api.giphy.com/v1/gifs/trending?</string>
    <string name="GIPHY_RANDOM">http://api.giphy.com/v1/gifs/random?</string>
    <string name="AD_MOB_APP_ID">ca-app-pub-4635898093945616~3345386484</string>
    <string name="AD_MOB_OPT_IN_AD_ID">ca-app-pub-4635898093945616/6205382793</string>
    <string name="AD_MOB_AD_ID">ca-app-pub-4635898093945616/9306913108</string>
    <string name="AD_MOB_AD_TEST_ID">ca-app-pub-3940256099942544/5224354917</string>
    <string name="facebook_app_id">126934527886750</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="leave_a_remark">Leave A Comment..</string>
    <string name="replies">Replies</string>
    <string name="add_new_entry">Create Post</string>
    <string name="optional_text">Optional Text..</string>
    <string name="finish"> Post </string>
    <string name="update">Update</string>
    <string name="delete">Delete This Entry</string>
    <string name="delete_all">Delete All Entries</string>
    <string name="edit">Edit Entry</string>
    <string name="locked">Locked</string>
    <string name="transmitter_tutorial">Click and hold to transmit to others. You will receive a check mark to confirm your transmission</string>
    <string name="permission_needed_title">Permissions Needed</string>
    <string name="MAPS_API_KEY">AIzaSyA745lmop2J1tobzHWQBtRDALam3NE77JY</string>
    <string name="record_access_info">Truck Radio needs permission to capture audio from the microphone and the ability to read the device phone state in order to transmit to others.</string>
    <string name="gps_access_title">Share Your Location</string>
    <string name="gps_access_info">To share your general position with others Channel 19 needs access to your gps</string>
    <string name="photo_access_title">Photo Access</string>
    <string name="photo_access_info">In order to exchange photos Channel 19 needs access to these directories</string>
    <string name="background_access_info">In order to select a custom background Channel 19 needs access to these directories</string>
    <string name="no_flags">No Flags</string>
    <string name="no_salutes">No Salutes</string>
    <string name="menu_account_info">Account Info</string>
    <string name="menu_driver_info">Driver Info</string>
    <string name="menu_control_panel">Control Panel</string>
    <string name="app_name" translatable="false">Channel 19</string>
    <string name="help">\?</string>
    <string name="noaccount">Click Here to Create Account</string>
    <string name="emailhint">Email</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgotlogin">Forgot Login?</string>
    <string name="tm">TM</string>
    <string name="year">2015</string>
    <string name="hold">Hold</string>
    <string name="toggle">Toggle</string>
    <string name="mickeybehavior">Mic Key Behavior</string>
    <string name="slash">/</string>
    <string name="lastupdated">Last Updated:\u0020</string>
    <string name="udp">Edit Profile</string>
    <string name="blocked">Block Lists</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reenter">Re-Enter Password</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="headset">Bluetooth Headset</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="tenfour">10–4</string>
    <string name="help2">Switches the \"keying-up\" button behavior for transmitting to either holding down or toggling on and off</string>
    <string name="help3">Optionally alter your device hard volume \"up\" and \"down\" keys to \"key-up\" and \"skip\" for Channel 19 when visible</string>
    <string name="help7">Vibration option for all button presses</string>
    <string name="help8">Enable/Disable extra audio played when logging in or out</string>
    <string name="helpD">Altering your current driver profile is limited to once every ten days so choose wisely!</string>
    <string name="help10">Enable/Disable incoming messages or photos.</string>
    <string name="help12">Enable/Disable the audio visualization UI on Blackout</string>
    <string name="help13">Disable headset integration and control if you would like to port media through device speaker or separate bluetooth "media" connection while headset is paired. \"Alt\" mode will alternate the logic for compatibility</string>
    <string name="help20">\"BlackOut\" or \"Night Mode\" prevents screen burn and minimizes ambient light for night time use</string>
    <string name="help21">Select for portrait or landscape.</string>
    <string name="help34">Adjusts the \"keyed-up\" animation speed</string>
    <string name="help38">Enable sharing to show your location to other users. Otherwise, your location will only be shown to yourself</string>
    <string name="help41">Sets the limit of the queue while paused</string>
    <string name="help40">Alters the appearance of the locations map</string>
    <string name="help42">Sets the maximum amount of transmissions purged per execution</string>
    <string name="help43">Sets the range of miles for nearby user alerts </string>
    <string name="vibration">Vibration</string>
    <string name="extra">Extra Sounds</string>
    <string name="login">LogIn</string>
    <string name="logout">LogOut</string>
    <string name="contact">Contact Us</string>
    <string name="terms">Terms Of Use</string>
    <string name="changepassword">Update Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="reenterpassword">Re-Enter New Password</string>
    <string name="muted">Muted</string>
    <string name="longclickmessage">LONG PRESS HERE TO CLEAR LIST</string>
    <string name="send"> Send </string>
    <string name="hintmessage">Type Message Here…</string>
    <string name="privated">Private Message</string>
    <string name="reply">Reply</string>
    <string name="TRPM">Private Message</string>
    <string name="enabled">Enabled</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="focus">Audio Focus</string>
    <string name="ptr">Professional Driver</string>
    <string name="gsp">Goods/Service Provider</string>
    <string name="rsp">Religious Speaker</string>
    <string name="comm">Commercial Company</string>
    <string name="checkav">Check Availability</string>
    <string name="checkmark" translatable="false">✓</string>
    <string name="closev">C\nL\nO\nS\nE</string>
    <string name="sendv">S\nE\nN\nD</string>
    <string name="stats">Profile Stats</string>
    <string name="chagne">Change</string>
    <string name="Accept">Accept</string>
    <string name="infob2">Headset connections are automatic unless disabled and can be used to transmit and receive.  Although device compatibility differs, \"Channel 19\" is designed to be controlled remotely with the headsets \"end call\" button.  One press to start and one to stop transmission.  You may also switch this action in your settings.  A bluetooth icon is displayed when connected and can be pressed to refresh the connection.</string>
    <string name="infob1">Channel 19 is for truckers and those that service the industry.  \"Channel-19\" is divided into five channels.  The total number of users online is displayed above the selected band.  The integer at the bottom right represents the current number users in your particular sideband.  It is not possible to be walked on so when multiple drivers key up simultaneously they will be added to the queue.  If the queue rises above nine all users mic\'s will be temporarily disabled until the queue plays down.</string>
    <string name="infob3">The user list for the current sideband is accessible by selecting the user icon at the bottom of the screen.  Clicking the mail icon inside this list will initiate a private text message while clicking a drivers handle will bring up optionalal actions to take.  Salutes and flags effect each users reputation which is represented by earned stars in there profile.  You may choose to block a users radio, messaging, or photos as well</string>
    <string name="salut">Salute User</string>
    <string name="flag">Flag User</string>
    <string name="block">Block User</string>
    <string name="prove">Prove Your Human</string>
    <string name="enternumber">enter the number shown above</string>
    <string name="creating">Create A New Account</string>
    <string name="transfer">Send Photo</string>
    <string name="radior">Radio</string>
    <string name="photop">Photo</string>
    <string name="currently_blocked">Currently Blocked</string>
    <string name="kick_user">Kick User</string>
    <string name="service_bann">Service Bann</string>
    <string name="flag_out">Flag Out</string>
    <string name="block_radio">Block Radio</string>
    <string name="block_text">Block Text</string>
    <string name="block_photos">Block Photo</string>
    <string name="text">Text</string>
    <string name="recieve_options">Receive Options</string>
    <string name="messages">Messages</string>
    <string name="photos">Photos</string>
    <string name="go_back">Go Back</string>
    <string name="company_driver">Company Driver</string>
    <string name="owner_operator">Owner Operator</string>
    <string name="lease_operator">Lease Operator</string>
    <string name="retired_driver">Retired Driver</string>
    <string name="type_caption">Type Caption</string>
    <string name="truck_radio_on_fb">Follow us on Facebook</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="questions_or_comments">Questions or Comments</string>
    <string name="orientation">Orientation</string>
    <string name="black_out_delay">Black Out Delay</string>
    <string name="override_volume_keys">Override Volume Keys</string>
    <string name="mic_animation_speed">Mic Animation Speed</string>
    <string name="purge_limit">Purge Limit</string>
    <string name="nearby_limit">Nearby Range</string>
    <string name="portrait">Portrait</string>
    <string name="enter_text">Enter Text…</string>
    <string name="create_new_channel">New Channel</string>
    <string name="title_name">Title / Name</string>
    <string name="_1234">1234</string>
    <string name="private_text">Private</string>
    <string name="unlock">Unlock</string>
    <string name="create" translatable="false">Create</string>
    <string name="enter_poll_question_here">Enter poll question here…</string>
    <string name="enter_here">Enter Here</string>
    <string name="optional">*optional</string>
    <string name="public_profile">Public Profile</string>
    <string name="radio_handle">Radio Handle</string>
    <string name="carrier_company">Carrier/Company</string>
    <string name="location">Location</string>
    <string name="add_text">Add Text</string>
    <string name="edit_text">Edit Text</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="delete_posts">Delete Posts</string>
    <string name="bann_user">Bann User</string>
    <string name="lock">Lock</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="delete_message">Delete Message</string>
    <string name="save_photo">Save Photo</string>
    <string name="copy_text">Copy Text</string>
</resources>