<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/save_post"
		android:icon="@drawable/gallery"
		android:title="@string/save"/>
	<item
		android:id="@+id/save_remark"
		android:icon="@drawable/gallery"
		android:title="@string/save"/>
	<item
		android:id="@+id/add_text"
		android:icon="@drawable/gallery"
		android:title="@string/add_text"/>
	<item
		android:id="@+id/edit_text"
		android:icon="@drawable/gallery"
		android:title="@string/edit_text"/>
	<item
		android:id="@+id/delete_post"
		android:icon="@drawable/gallery"
		android:title="@string/delete_post"/>
	<item
		android:id="@+id/edit_remark"
		android:icon="@drawable/gallery"
		android:title="@string/edit_comment"/>
	<item
		android:id="@+id/delete_remark"
		android:icon="@drawable/gallery"
		android:title="@string/delete_comment"/>
	<item
		android:id="@+id/delete_all_post"
		android:icon="@drawable/gallery"
		android:title="@string/delete_posts"/>
	<item
		android:id="@+id/bann_user"
		android:icon="@drawable/gallery"
		android:title="@string/bann_user"/>
	<item
		android:id="@+id/lock_post"
		android:icon="@drawable/gallery"
		android:title="@string/lock"/>
	<item
		android:id="@+id/unlock_post"
		android:icon="@drawable/gallery"
		android:title="@string/unlock"/>
	<item
		android:id="@+id/delete_chat"
		android:icon="@drawable/gallery"
		android:title="@string/delete_chat"/>
	<item
		android:id="@+id/delete_message"
		android:icon="@drawable/gallery"
		android:title="@string/delete_message"/>
	<item
		android:id="@+id/save_photo"
		android:icon="@drawable/gallery"
		android:title="@string/save_photo"/>
	<item
		android:id="@+id/copy_text"
		android:icon="@drawable/gallery"
		android:title="@string/copy_text"/>
</menu>