<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outside"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/black_box_white_outline_slight_transparent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/blue_box_white_outline_transparent"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/create_new_channel"
            android:textAppearance="@style/title_font" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding">

            <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@null"
                android:hint="@string/title_name"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="25"
                android:textAppearance="@style/large_font" />

            <CheckBox
                android:id="@+id/lock_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_et"
                android:text="@string/private_text" />

            <EditText
                android:id="@+id/pin_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_et"
                android:layout_toRightOf="@+id/lock_option"
                android:background="@null"
                android:ems="4"
                android:gravity="center"
                android:hint="@string/_1234"
                android:inputType="number"
                android:lines="1"
                android:maxLength="4"
                android:textAppearance="@style/large_font"
                android:visibility="invisible" />


        </RelativeLayout>

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:background="@drawable/dialog_button"
            android:gravity="center"
            android:text="@string/create"
            android:textAppearance="@style/title_font"
            android:textColor="@drawable/white_to_blue_text" />
    </LinearLayout>
</RelativeLayout>