<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/black_box_white_outline_slight_transparent"
                android:orientation="vertical">
	
	<TextView
		android:id="@+id/banner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:background="@drawable/blue_box_white_outline_transparent"
		android:gravity="center"
		android:padding="@dimen/default_padding"
		android:text="@string/type_caption"
		android:textAppearance="@style/title_font"/>
	
	<EditText
		android:id="@+id/captionET"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/banner"
		android:background="@null"
		android:hint="@string/enter_text"
		android:inputType="textAutoComplete"
		android:maxLength="50"
		android:padding="@dimen/default_padding"
		android:textAppearance="@style/large_font"/>
	
	<TextView
		android:id="@+id/ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/captionET"
		android:layout_gravity="right"
		android:background="@drawable/dialog_button"
		android:gravity="center"
		android:text="@string/tenfour"
		android:textAppearance="@style/title_font"/>
</RelativeLayout>