<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black_transparent_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_box_white_outline_square_bottom">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAppearance="@style/title_font"
            android:textColor="@drawable/white_to_blue_text"
            app:layout_constraintBottom_toBottomOf="@+id/finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button"
            android:gravity="center"
            android:text="@string/create"
            android:textAppearance="@style/title_font"
            android:textColor="@drawable/white_to_blue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_poll_question_here"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="2"
            android:padding="@dimen/default_padding"
            android:textAppearance="@style/large_font"
            android:textColor="@color/main_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>