<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/outside"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/black_box_white_outline"
	android:gravity="center">


	<TextView
		android:id="@+id/carrier"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@drawable/blue_box_white_outline"
		android:gravity="center"
		android:padding="@dimen/default_padding"
		android:text="@string/currently_blocked"
		android:textAppearance="@style/title_font"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />


	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recyclerView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:longClickable="false"
		android:padding="@dimen/half_margin"
		android:scrollbarSize="1dp"
		android:scrollbarStyle="insideOverlay"
		android:scrollbarThumbVertical="@drawable/scrollbar"
		android:scrollbars="vertical"
		android:scrollingCache="false"
		android:smoothScrollbar="false"
		android:verticalScrollbarPosition="left"
		app:layout_constraintBottom_toTopOf="@+id/instruct"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/carrier" />

	<TextView
		android:id="@+id/instruct"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:longClickable="true"
		android:padding="@dimen/half_margin"
		android:text="@string/longclickmessage"
		android:textAppearance="@style/small_font"
		app:layout_constraintBottom_toTopOf="@+id/order"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/order"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/action_bar_offset"
		android:layout_weight="1"
		android:background="@drawable/dialog_button"
		android:gravity="center"
		android:text="@string/cancel"
		android:textAppearance="@style/title_font"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/middle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/half_margin"
		android:text="45"
		android:textAppearance="@style/small_font"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/save"
		app:layout_constraintStart_toEndOf="@+id/order"
		app:layout_constraintTop_toBottomOf="@+id/instruct" />

	<TextView
		android:id="@+id/save"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/action_bar_offset"
		android:layout_weight="1"
		android:background="@drawable/dialog_button"
		android:gravity="center"
		android:text="@string/save"
		android:textAppearance="@style/title_font"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>